--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
-#c {
-  width: 95%;
+@import url("https://webgl2fundamentals.org/webgl/resources/webgl-tutorials.css");
+
+body {
+  margin: 0;
+}
+
+canvas {
+  width: 90vw;
+  height: 90vh;
+  display: block;
 }
