Tweaks: rotation, styling, copy...

--- a/style.css
+++ b/style.css
@@ -1,13 +1,30 @@
 /*@import url("https://webgl2fundamentals.org/webgl/resources/webgl-tutorials.css");*/
 
-body {
-  margin: 0;
+:root {
+  --dark: #222034;
+  --light: #eee7ca;
+}
 
+html {
+  font-size: 24px;
+  font-weight: bold;
+}
+
+body {
+  height: 100vh;
+  margin: 0;
+  background: var(--light);
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  justify-content: center;
+  align-items: center;
+}
+
+h1, p, a, span {
+  font-family: 'IBM Plex Serif', serif;
+  color: var(--dark);
 }
 
 #c {
-  height: calc(100vh - 10rem);
+  height: 500px;
 }
