--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
   --light: #eee7ca;
 }
 
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
 html {
   font-size: 24px;
   font-weight: bold;
@@ -12,19 +16,47 @@ html {
 
 body {
   height: 100vh;
-  margin: 0;
-  background: var(--light);
+  width: 100vw;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin: 0;
+  background: var(--dark);
 }
 
-h1, p, a, span {
+.page {
+  max-height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 2rem 1rem;
+  display: flex;
+  overflow-y: auto;
+}
+
+h1, h2, h3, p, a, span {
   font-family: 'IBM Plex Serif', serif;
-  color: var(--dark);
+  color: var(--light);
+  text-align: center;
+}
+
+h2 {
+  margin: 0;
 }
 
 #c {
-  height: 500px;
+  width: 100%;
+  height: 100%;
+  max-width: 500px;
+  max-height: 500px;
+}
+
+#baz {
+  text-decoration: none;
+  height: 0.75rem;
+}
+
+#baz img {
+  height: 100%;
 }
