--- a/style.css
+++ b/style.css
@@ -45,6 +45,10 @@ h2 {
   margin: 0;
 }
 
+span {
+  margin-top: 5rem;
+}
+
 #c {
   width: 100%;
   height: 100%;
@@ -55,6 +59,7 @@ h2 {
 #baz {
   text-decoration: none;
   height: 1.25rem;
+  margin-top: 2rem;
 }
 
 #baz img {
